--- a/index.html
+++ b/index.html
@@ -9,4 +9,5 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak=XLrc8f0szbIsUmHKyLOtp2pVWfDZFaqs"></script>
 </html>
